# UDI-AMAZON

./: README.md
amazon/: .env.example  .gitignore  amazon_high_delivery_hubs_india.csv  campaigns_data.csv  download_test_report.py  profiles_list.csv  pyproject.toml  requirements.txt  scratch_check.py  scratch_check_scoped.py  streamlit_app.py  test_adgroup_report.py  test_campaign_clean.py  test_dim_only.py  test_final_campaign.py  test_final_targeting.py  test_product_report.py  test_server_logic.py  test_v2_report.py  test_v3_errors.py
amazon/backend/: test_active_profiles.py  test_all_profiles.py  test_amazon_auth.py  test_campaigns.py  test_download_report.py  test_env.py  test_report.py  test_report_status.py  test_store_campaigns.py  test_store_metrics.py  wait_for_report.py
amazon/backend/core/: config.py  supabase_client.py  test_supabase.py
amazon/backend/services/: amazon_ads_service.py  campaign_storage_service.py  daily_metrics_service.py  report_service.py
amazon/config/: profiles.yaml  profiles.yaml.example
amazon/frontend/: package-lock.json  package.json  tailwind.config.js
amazon/ranges/: 1420957209508026.csv
amazon/server/: main.py
amazon/tests/: test_auth_sanitize.py  test_config_env_clean.py  test_date_windows.py  test_json_first_flow.py  test_metrics.py  test_parse.py  test_pipeline_fallback.py  test_pipeline_guard.py  test_pivot.py  test_profile_cache.py  test_profile_discovery.py  test_profile_groups.py  test_report_config.py  test_report_exceptions.py  test_report_mapping.py  test_reports_poll_timeout.py
(+23 files in other folders)
