[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-ads-app"
version = "0.1.0"
description = "Amazon Ads SP campaign reporter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
amazon-ads-fetch = "amazon_ads_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
